Add privacy policy for Quadrille application
Added a privacy policy section to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+Privacy Policy for Quadrille
 
+Last updated: 15 Dec 2025
+
+This privacy policy governs your use of the software application "Quadrille" ("Application") for mobile devices, 
+created by Arif Afsar.
+
+
+What information does the Application obtain and how is it used?
+
+The Application does not obtain or transmit any personally identifiable information about you, such as your name, address, phone number, or email address. The coordinate data you enter is used solely for the Application's core functionality and is not stored, collected, or shared in any way.
+
+
+Contact Us
+
+If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at apu.aniket@yahoo.com.
